# cesr

./: .gitignore  .yamllint.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  NOTICE  README.md  SECURITY.md  _typos.toml  audit.toml  clippy.toml  deny.toml  flake.nix  free-fn-budget.toml  justfile  release-plz.toml  rust-toolchain.toml  taplo.toml
.auto/: checks.sh  log.jsonl  measure.sh  prompt.md
.claude/: settings.local.json
.githooks/: post-merge  pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: checks.yml  codeql.yml  codspeed.yml  coverage.yml  fuzz.yml  keripy-diff.yml  keripy-sync.yml  release-plz.yml  reserve-crate.yml
benches/: base64.rs  counter.rs  matter.rs  stream.rs
cesr/: CHANGELOG.md  Cargo.toml
cesr-stream/: CHANGELOG.md  Cargo.toml
cesr-stream/benches/: counter.rs  matter.rs
cesr-stream/examples/: concurrent_parse.rs  parse_stream.rs
cesr-stream/src/: codec.rs  cold.rs  encode.rs  error.rs  lib.rs  message.rs  parse.rs  qb2.rs  unwrap.rs  version.rs
cesr/benches/: counter.rs  matter.rs  serder.rs  stream.rs
cesr/docs/keripy-parity/: report.md
cesr/examples/: concurrent_parse.rs  kel_chain.rs  multisig_threshold_icp.rs  parse_stream.rs
cesr/src/: lib.rs
cesr/src/b64/: alphabet.rs  binary.rs
cesr/src/core/: mod.rs  version.rs
cesr/src/core/counter/: mod.rs
cesr/src/core/indexer/: xizage.rs
cesr/src/core/matter/: builder.rs  matter.rs  test_vectors_boundary.rs
cesr/src/core/matter/code/: verser.rs
cesr/src/core/primitives/: mod.rs  number.rs  seqner.rs  tholder.rs
cesr/src/crypto/: error.rs  mod.rs  verify.rs
cesr/src/keri/: identifier.rs  mod.rs  role.rs  seal.rs  sequence.rs  threshold.rs  threshold_form.rs  toad.rs
cesr/src/keri/event/: delegation.rs  inception.rs  interaction.rs  mod.rs  rotation.rs
cesr/src/keripy_diff/: counter.rs  matter.rs  mod.rs  stream.rs
cesr/src/keripy_parity/: codex.rs  events.rs  formulas.rs  mod.rs  said_codes.rs  seal_events.rs  validation.rs
cesr/src/serder/: ample.rs  builder.rs  deserialize.rs  error.rs  event_strategies.rs  message.rs  mod.rs  primitives.rs  said.rs  serialize.rs  traits.rs  version.rs
cesr/src/serder/builder/: dip.rs  drt.rs  establishment.rs  icp.rs  ixn.rs  rot.rs  witness.rs
cesr/src/serder/deserialize/: canonical.rs  reference.rs
cesr/src/serder/serialize/: dip.rs  direct.rs  drt.rs  icp.rs  ixn.rs  json.rs  rot.rs
cesr/src/stream/: codec.rs  cold.rs  encode.rs  error.rs  message.rs  mod.rs  parse.rs  qb2.rs  unwrap.rs  version.rs
cesr/src/stream/group/: bound_state_sextuples.rs  kinds.rs  merkle_root_seal_singles.rs  mod.rs  seal_source_triples.rs  typed_digest_seal_couples.rs  typed_media_quadruples.rs  types.rs
cesr/tests/: allocation.rs  frozen_surface.rs  kel_chain.rs  prelude.rs  serder_allocation.rs  spine_write.rs
cesr/tests/corpus/keripy/: counter_v1.jsonl  counter_v2.jsonl  matter.jsonl  stream.jsonl
cesr/tests/corpus/keripy/parity/: codex.jsonl  events.jsonl  formulas.jsonl  seal_events.jsonl
coverage/: index.html
crates/cesr/: CHANGELOG.md  Cargo.toml  README.md
crates/cesr-stream/: CHANGELOG.md  Cargo.toml
crates/cesr-stream/benches/: stream.rs
crates/cesr-stream/src/: codec.rs  cold.rs  encode.rs  error.rs  lib.rs  message.rs  parse.rs  qb2.rs  unwrap.rs  version.rs
crates/cesr-stream/src/group/: kinds.rs  mod.rs
crates/cesr-stream/tests/: allocation.rs
crates/cesr-stream/tests/corpus/keripy/: indexer.jsonl
docs/: 193-cross-crate-duplication-audit.md  strategy.md
examples/: concurrent_parse.rs  delegated_inception.rs  encode_primitive.rs  incept_aid.rs  kel_chain.rs  keypair_sign_verify.rs  multisig_threshold_icp.rs
fuzz/: Cargo.toml  README.md
fuzz-afl/: Cargo.toml  README.md
fuzz-common/: Cargo.toml
fuzz-common/src/: lib.rs
fuzz/tests/: binary.rs  indexer.rs  matter.rs  serder.rs  smoke.rs  stream.rs
fuzz/tests/__fuzz__/matter_from_qb64/corpus/: regression-lead-bytes-oob-5baa  seed-blake3-256  seed-ed25519-seed  seed-ed25519n  seed-strb64-l0
fuzz/tests/__fuzz__/stream_groups/corpus/: seed-controller-2sig
keri/: CHANGELOG.md  Cargo.toml
keri-codec/: CHANGELOG.md  Cargo.toml
keri-codec/benches/: serder.rs
keri-codec/examples/: delegated_inception.rs  incept_aid.rs  kel_chain.rs  multisig_threshold_icp.rs
keri-codec/src/: builder.rs  deserialize.rs  error.rs  event_strategies.rs  lib.rs  message.rs  primitives.rs  said.rs  serialize.rs  traits.rs
keri-codec/src/builder/: dip.rs  drt.rs  establishment.rs  icp.rs  ixn.rs  rot.rs  witness.rs
keri-codec/src/deserialize/: canonical.rs  reference.rs
keri-codec/src/keripy_diff/: counter.rs  matter.rs  mod.rs  stream.rs
keri-codec/src/keripy_parity/: codex.rs  events.rs  formulas.rs  said_codes.rs  seal_events.rs  validation.rs
keri-codec/src/serialize/: json.rs
keri-codec/tests/: differential.rs  frozen_surface.rs  kel_chain.rs  properties.rs  serder_allocation.rs  spine.rs  spine_write.rs  transitions.rs
keri-codec/tests/common/: mod.rs
keri-codec/tests/corpus/keripy/parity/: codex.jsonl  events.jsonl  validation.jsonl
keri-events/: CHANGELOG.md  Cargo.toml
keri-events/src/: identifier.rs  seal.rs
keri-events/src/event/: delegation.rs  interaction.rs  mod.rs
keri/src/: authority.rs  error.rs  lib.rs  state.rs  threshold.rs  wire.rs
keri/src/fold/: inception.rs  interaction.rs  mod.rs  rotation.rs  rules.rs
keri/tests/: differential.rs  fold_boundary.rs  fold_chain.rs  fold_delegation.rs  fold_inception.rs  fold_interaction.rs  fold_props.rs  fold_rotation.rs  properties.rs  smoke.rs  spine.rs  transitions.rs
keri/tests/common/: mod.rs
keri/tests/corpus/: keystate.jsonl
keri/tests/fixtures/: keripy_icp_signed.cesr  keripy_icp_witnessed.cesr  keripy_kel_signed.cesr
scripts/: KERIPY_PIN  keripy_diff_gen.py  keripy_events_gen.py  keripy_keystate_gen.py  keripy_parity_gen.py  keripy_spine_gen.py
src/: lib.rs
tests/: allocation.rs  frozen_surface.rs  kel_chain.rs  prelude.rs
(+885 files in other folders)
