[package]
# Published to crates.io as `cesr-rs` because the bare `cesr` name is squatted
# (THCLab, v0.0.0). The LIBRARY name stays `cesr` (see [lib] below), so
# consumers still write `use cesr::...` — only the dependency key differs
# (`cesr-rs = { ... }` or `cesr = { package = "cesr-rs", ... }`).
name = "cesr-rs"
version = "0.7.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CESR + KERI primitives for Rust as a single feature-gated, no_std-capable crate"
categories = ["cryptography", "encoding", "no-std"]
keywords = ["cesr", "keri", "identity", "cryptography"]
readme = "README.md"

[lib]
# Import name stays `cesr` regardless of the published package name.
name = "cesr"

[features]
default = ["std", "core", "b64"]

# Environment gates
std = [
    "alloc",
    "serde?/std",
    "serde_json?/std",
    "thiserror/std",
    "rand_core?/std",
    "ed25519-dalek?/std",
    "k256?/std",
    "p256?/std",
    "base64?/std",
]
alloc = [
    "serde?/alloc",
    "serde_json?/alloc",
    "base64?/alloc",
    "zeroize?/alloc",
    "ed25519-dalek?/alloc",
    "k256?/alloc",
    "p256?/alloc",
]

# Module gates
b64 = ["dep:num-traits"]
core = ["b64", "dep:base64", "dep:num-traits", "dep:strum", "dep:zeroize"]
crypto = [
    "core",
    "dep:blake2",
    "dep:blake3",
    "dep:digest",
    "dep:ed25519-dalek",
    "dep:k256",
    "dep:p256",
    "dep:rand_core",
    "rand_core?/getrandom",
    "dep:getrandom",
    "dep:sha2",
    "dep:sha3",
    "dep:signature",
]
stream = ["core", "b64", "dep:bytes"]
keri = ["core"]
serder = ["keri", "crypto", "stream", "internals", "dep:serde", "dep:serde_json"]

# Stream async transport (was cesr-stream `async`)
async = ["stream", "dep:tokio-util", "dep:futures-core"]

# Test-only escape hatch preserved from cesr-core (new_unchecked etc.)
test-utils = []

# Internal keri constructors (was keri-core `internals`) — required by serder.
internals = []

[dependencies]
base64 = { version = "0.22.1", default-features = false, optional = true }
blake2 = { version = "0.10.6", default-features = false, optional = true }
blake3 = { version = "1.8.3", default-features = false, optional = true }
bytes = { version = "1.10.1", default-features = false, optional = true }
digest = { version = "0.10.7", default-features = false, optional = true }
ed25519-dalek = { version = "2.2.0", default-features = false, features = ["rand_core"], optional = true }
futures-core = { version = "0.3.31", default-features = false, optional = true }
k256 = { version = "0.13.4", default-features = false, features = ["ecdsa"], optional = true }
num-traits = { version = "0.2.19", default-features = false, optional = true }
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa"], optional = true }
rand_core = { version = "0.6", default-features = false, optional = true }
serde = { version = "1.0.228", default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1.0.149", default-features = false, features = ["preserve_order"], optional = true }
sha2 = { version = "0.10.9", default-features = false, optional = true }
sha3 = { version = "0.10.8", default-features = false, optional = true }
signature = { version = "2.2.0", default-features = false, optional = true }
strum = { version = "0.28.0", default-features = false, features = ["derive", "phf"], optional = true }
thiserror = { workspace = true }
tokio-util = { version = "0.7.15", default-features = false, features = ["codec"], optional = true }
zeroize = { version = "1.8.2", default-features = false, features = ["derive"], optional = true }

# wasm32 needs an explicit getrandom backend; the `js` backend wires OsRng to the
# browser/Node Crypto API. rand_core 0.6 (via crypto deps) pulls getrandom 0.2.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", default-features = false, features = ["js"], optional = true }

[dev-dependencies]
criterion = { version = "5.0.1", package = "codspeed-criterion-compat", default-features = false, features = [
    "cargo_bench_support",
] }
proptest = "1.10.0"
rstest = "0.26.1"
tokio = { version = "1.49.0", default-features = false, features = ["rt", "macros"] }

[[bench]]
name = "base64"
harness = false
required-features = ["core"]

[[bench]]
name = "matter"
harness = false
required-features = ["stream"]

[[bench]]
name = "counter"
harness = false
required-features = ["stream"]

[[bench]]
name = "stream"
harness = false
required-features = ["stream"]

[[bench]]
name = "serder"
harness = false
required-features = ["serder"]

[[example]]
name = "concurrent_parse"
required-features = ["stream"]

[[example]]
name = "encode_primitive"
required-features = ["core"]

[[example]]
name = "keypair_sign_verify"
required-features = ["crypto"]

[[example]]
name = "parse_stream"
required-features = ["stream"]

[[example]]
name = "incept_aid"
required-features = ["serder"]

[[example]]
name = "multisig_threshold_icp"
required-features = ["serder"]

[[example]]
name = "kel_chain"
required-features = ["serder"]

[[example]]
name = "delegated_inception"
required-features = ["serder"]

[lints]
workspace = true
