[package]
name = "keri-rs"
version = "0.0.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Sans-IO KERI (Key Event Receipt Infrastructure) core built on cesr-rs. Under active development."
categories = ["cryptography", "no-std"]
keywords = ["keri", "cesr", "identity", "cryptography"]

[lib]
# Import name is `keri` regardless of the published `keri-rs` package name.
name = "keri"

[features]
default = ["std"]
std = ["cesr/std"]
alloc = ["cesr/alloc"]

[dependencies]
# PUBLIC API ONLY. Must NOT enable cesr's `internals` or `test-utils` features
# (the only back-doors to non-public items). Enforced by the flake boundary check.
cesr = { package = "cesr-rs", path = "../cesr", version = "0.6", default-features = false, features = [
    "core",
    "keri",
    "crypto",
    "alloc",
] }
thiserror = { workspace = true }

[dev-dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
cesr = { package = "cesr-rs", path = "../cesr", default-features = false, features = [
    "std",
    "core",
    "keri",
    "crypto",
    "stream",
    "serder",
] }
proptest = "1"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.149", default-features = false, features = ["alloc"] }

[lints]
workspace = true
