[package]
name = "keri-rs"
version = "0.0.6"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Sans-IO KERI (Key Event Receipt Infrastructure) core built on cesr-rs. Under active development."
categories = ["cryptography", "no-std"]
keywords = ["keri", "cesr", "identity", "cryptography"]

[lib]
# Import name is `keri` regardless of the published `keri-rs` package name.
name = "keri"

[features]
default = ["std"]
std = ["cesr/std", "keri-codec?/std"]
alloc = ["cesr/alloc", "keri-codec?/alloc"]
# Optional wire-edge adapter (the #128 "optional edge"): enables the
# `keri-codec` crate so a parsed `keri_codec::EventMessage` converts straight
# into `Signed`. Default features are unchanged — the sans-io core never sees
# wire bytes unless the consumer opts in.
wire = ["dep:keri-codec"]

[dependencies]
# PUBLIC API ONLY. Must NOT enable cesr's `internals` or `test-utils` features
# (the only back-doors to non-public items). Enforced by the flake boundary check.
# The `wire` feature may enable `keri-codec` (still public API only).
cesr = { package = "cesr-rs", path = "../cesr", version = "0.9", default-features = false, features = [
    "core",
    "keri",
    "crypto",
    "alloc",
] }
keri-codec = { path = "../keri-codec", version = "0.1", default-features = false, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
cesr = { package = "cesr-rs", path = "../cesr", default-features = false, features = [
    "std",
    "core",
    "keri",
    "crypto",
] }
proptest = "1"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.149", default-features = false, features = ["alloc"] }

[lints]
workspace = true
